--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     align-items: center;
     flex-direction: column;
     min-height: 80vh;
-    background-color: #f0f0f0; /* Default background color */
+    background-color: #f0f0f0; 
 }
 
 #image-container {
@@ -34,14 +34,14 @@ body {
 }
 
 #image-wrapper {
-    margin-bottom: 10px; /* Add spacing between image and controls */
+    margin-bottom: 10px;
 }
 
 #image-wrapper img {
-    max-width: 80%; /* Adjusted width */
-    max-height: 60vh; /* Adjusted height */
-    border-radius: 10px; /* Add border radius */
-    margin: 0 auto; /* Center the image horizontally */
+    max-width: 80%; 
+    max-height: 60vh; 
+    border-radius: 10px; 
+    margin: 0 auto; 
 }
 
 #controls {
@@ -52,24 +52,24 @@ body {
 }
 
 #color-picker {
-    margin-left: 10px; /* Add spacing between controls */
+    margin-left: 10px; 
 }
 
 #image-description {
     font-family: 'Poppins', Arial, sans-serif;
-    font-size: 16px; /* Adjust the font size */
-    color: #333; /* Adjust the font color */
+    font-size: 16px; 
+    color: #333; 
 }
 
 #text-container {
     text-align: center;
-    margin-top: 20px; /* Adjust the space between h2 and the text */
-    margin-bottom: 20px; /* Adjust the space between the text and the image */
+    margin-top: 20px; 
+    margin-bottom: 20px; 
 }
 
 #text-container a {
     display: block;
-    max-width: 80%; /* Limit the width of the text */
-    margin: 0 auto; /* Center the text horizontally */
+    max-width: 80%; 
+    margin: 0 auto;
 }
 
